--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
     jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     maven { url 'https://maven.aliyun.com/repository/public' }
+    mavenCentral()
 }
 
 googleJavaFormat {
@@ -71,22 +72,33 @@ sourceSets {
     }
 }
 
+def log4j_version="2.15.0"
+List logger = [
+        "org.apache.logging.log4j:log4j-api:$log4j_version",
+        //"org.apache.logging.log4j:log4j-core:$log4j_version",
+        //"org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version",
+        //"org.apache.logging.log4j:log4j-to-slf4j:$log4j_version",
+        //"org.apache.logging.log4j:log4j-web:$log4j_version",
+        //"org.apache.logging.log4j:log4j-jul:$log4j_version"
+]
+
 dependencies {
+    compile logger
     compile 'com.moandjiezana.toml:toml4j:0.7.2'
-    compile 'org.springframework.boot:spring-boot-starter-web:2.4.9'
-    compile 'org.springframework.boot:spring-boot-starter-aop:2.4.9'
-    compile 'org.springframework.boot:spring-boot-starter-security:2.4.9'
-    compile 'org.springframework:spring-aspects:5.2.12.RELEASE'
-    compile 'org.springframework:spring-aop:5.2.12.RELEASE'
-    compile 'org.asynchttpclient:async-http-client:2.12.2'
+    compile 'org.springframework.boot:spring-boot-starter-web:2.6.1'
+    compile 'org.springframework.boot:spring-boot-starter-aop:2.6.1'
+    compile 'org.springframework.boot:spring-boot-starter-security:2.6.1'
+    compile 'org.springframework:spring-aspects:5.3.13'
+    compile 'org.springframework:spring-aop:5.3.13'
+    compile 'org.asynchttpclient:async-http-client:2.12.3'
     compile 'io.netty:netty-buffer:4.1.52.Final'
     compile 'io.netty:netty-handler:4.1.52.Final'
     compile 'com.google.guava:guava:30.1-jre'
     compile 'commons-codec:commons-codec:1.14'
     compile 'org.bouncycastle:bcprov-jdk15on:1.60'
     compile 'junit:junit:4.12'
-    compile 'org.aspectj:aspectjrt:1.9.2'
-    compile 'org.aspectj:aspectjweaver:1.9.2'
+    compile 'org.aspectj:aspectjrt:1.9.7'
+    compile 'org.aspectj:aspectjweaver:1.9.7'
 }
 configurations.compile.exclude(group: 'ch.qos.logback')
 jar {
